feat: Enable @pantheon-org/tools package reference for Nx executors (#12)
* fix: update dev-proxy executor path to use relative path in agent-loader plugin

- Changes @pantheon-org/tools:dev-proxy to ../../tools/executors:dev-proxy
- Ensures consistency with warcraft-notifications plugin
- Fixes executor resolution error that prevented dev-proxy from running
- The @pantheon-org/tools package reference was not resolvable by Nx

* fix: add tools/executors to workspaces and use relative executor paths

## Changes

1. **Added tools/executors to Bun workspaces** in package.json
   - Makes @pantheon-org/tools properly recognized by package manager
   - Sets isInPackageManagerWorkspaces: true in Nx metadata
   - Aligns with monorepo workspace structure

2. **Kept relative path for executor resolution** in agent-loader plugin
   - Uses ../../tools/executors:dev-proxy instead of @pantheon-org/tools:dev-proxy
   - Ensures consistency with warcraft-notifications plugin

## Why relative paths are necessary

Even though @pantheon-org/tools is now in workspaces, Nx cannot resolve
@pantheon-org/tools:dev-proxy because:

1. Nx tries to import the package as a Node module
2. The tools package has no main entry point (only executors.json)
3. Bun doesn't create node_modules symlinks the same way npm/yarn do
4. Relative paths work reliably and are the standard Nx pattern for
   local executors in monorepos

## Testing

- bunx nx run opencode-agent-loader-plugin:dev-proxy --help ✓
- bunx nx run opencode-warcraft-notifications-plugin:dev-proxy --help ✓
- Both plugins use consistent relative path approach

* feat: enable @pantheon-org/tools package reference for executors

## What Changed

1. **Added TypeScript path mapping** in tsconfig.base.json
   - Maps @pantheon-org/tools to tools/src/index.ts
   - Enables TypeScript module resolution for the tools package

2. **Created entry point** at tools/src/index.ts
   - Required for Nx to resolve the package as a Node module
   - Exports empty

--- a/project.json
+++ b/project.json
@@ -28,7 +28,7 @@
       }
     },
     "check-mirror-exists": {
-      "executor": "../../tools/executors:check-mirror-exists"
+      "executor": "@pantheon-org/tools:check-mirror-exists"
     },
     "lint": {
       "executor": "nx:run-commands",
